# puddles

./: CMakeLists.txt  readme.md
source/: except.h  main.cpp  matrix.h  solver.cpp  solver.h
tests/: est.py  generator.cpp  neg.sh  run.sh  variation.py
tests/vectors/: 003.in  003.out  004.in  004.out  005.in  005.out  007.in  007.out  008.in  009.in  009.out  10_17.in  i002.in  i003.in
